syntax = "proto3";

package proto;
option go_package = "./;proto";

import "AnimatorParameterValueInfo.proto";

message AnimatorParameterValueInfoPair {
  int32 name_id = 1;
  AnimatorParameterValueInfo animator_para = 2;
}
