syntax = "proto3";

package proto;
option go_package = "./;proto";


message BlockInfo {
  uint32 block_id = 1;
  uint32 data_version = 2;
  bytes bin_data = 3;
  bool is_dirty = 4;
}
