syntax = "proto3";

package proto;
option go_package = "./;proto";

// CmdId: 252
// EnetChannelId: 0
// EnetIsReliable: true
message EnterSceneReadyRsp {
  int32 retcode = 5;
  uint32 enter_scene_token = 8;
}
