syntax = "proto3";

package proto;
option go_package = "./;proto";

import "AbilitySyncStateInfo.proto";

message MPLevelEntityInfo {
  uint32 entity_id = 4;
  uint32 authority_peer_id = 3;
  AbilitySyncStateInfo ability_info = 12;
}
