syntax = "proto3";

package proto;
option go_package = "./;proto";

import "Vector.proto";

message PersonalSceneJumpRsp {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    CMD_ID = 248;
  }

  int32 retcode = 15;
  uint32 dest_scene_id = 2;
  Vector dest_pos = 6;
}
