syntax = "proto3";

package proto;
option go_package = "./;proto";

message PlayerWorldSceneInfo {
  uint32 scene_id = 13;
  bool is_locked = 6;
  repeated uint32 scene_tag_id_list = 9;
}
