syntax = "proto3";

package proto;
option go_package = "./;proto";

import "MotionInfo.proto";

message SceneEntityMoveNotify {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 1;
    ENET_IS_RELIABLE = 1;
    CMD_ID = 227;
  }

  uint32 entity_id = 10;
  MotionInfo motion_info = 3;
  uint32 scene_time = 12;
  uint32 reliable_seq = 11;
}
