syntax = "proto3";

package proto;
option go_package = "./;proto";


message SceneForceUnlockNotify {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    CMD_ID = 201;
  }

  repeated uint32 force_id_list = 1;
  bool is_add = 5;
}
