syntax = "proto3";

package proto;
option go_package = "./;proto";


message ServerTimeNotify {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 1;
    ENET_IS_RELIABLE = 1;
    CMD_ID = 82;
  }

  uint64 server_time = 15;
}
