syntax = "proto3";

package proto;
option go_package = "./;proto";

import "AbilitySyncStateInfo.proto";
import "AbilityControlBlock.proto";

message TeamEnterSceneInfo {
  uint32 team_entity_id = 14;
  AbilitySyncStateInfo team_ability_info = 4;
  AbilityControlBlock ability_control_block = 10;
}
