syntax = "proto3";

package proto;
option go_package = "./;proto";

import "AvatarTeamResonanceInfo.proto";

message TeamResonanceChangeNotify {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    CMD_ID = 1014;
  }

  repeated AvatarTeamResonanceInfo info_list = 1;
}
