syntax = "proto3";

package proto;
option go_package = "./;proto";

import "PlayerDieType.proto";

message WorldPlayerDieNotify {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    CMD_ID = 296;
  }

  oneof Entity {
    uint32 monster_id = 10;
    uint32 gadget_id = 11;
  }
  PlayerDieType die_type = 9;
  uint32 murderer_entity_id = 14;
}
